--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "author": "Robert Corponoi",
     "license": "MIT",
     "type": "module",
-    "exports": "./dist/index.js",
+    "exports": {
+        "*": {
+            "import": "./dist/index.js",
+            "types": "./dist/index.d.ts"
+        }
+    },
     "engines": {
         "node": ">=14.16"
     },
@@ -18,8 +23,9 @@
     },
     "scripts": {
         "set-permissions": "chmod +x dist/index.js",
-        "build": "tsc && npm run set-permissions",
-        "build:watch": "concurrently \"tsc --watch\" \"npm run set-permissions\""
+        "build": "tsc --declaration && npm run set-permissions",
+        "build:watch": "concurrently \"tsc --watch\" \"npm run set-permissions\"",
+        "prepare": "if [ ! -d 'dist' ]; then npm run build; fi"
     },
     "devDependencies": {
         "@types/node": "^18.15.3",
